# wispy-vm

./: Cargo.toml  README.md
benchmarks/wispy/: bench.rs  bench_counter_runtime.c  bench_nqueens_runtime.c
cmd/wispy-repl/: Cargo.toml  build.rs
cmd/wispy-repl/src/: main.rs  main.scm
docs/: futamura-projections.md  proposal-zclaw.md  r7rs-small-plan.md
examples/wispy/: algebra-smoke.scm  eliza.scm  fib.scm  futamura-cps.scm  futamura-real.scm  futamura.scm  ir-lib.scm  metacircular.scm  nqueens.scm  pe.scm  r4rs-smoke.scm  reflective-tower.scm  self-portrait.scm  specialize.scm  transpile.scm
vm/: Cargo.toml
vm/src/: lib.rs  primitive_set.rs  type.rs
wispy/: Cargo.toml
wispy/src/: lib.rs  main.rs  prelude.scm  primitive_set.rs
